--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -8,8 +8,8 @@
   },
   "HERO": {
     "NAME": "Just Pixel Design Notes",
-    "TITLE": "Software Engineer",
-    "DESCRIPTION": "I'm a software engineer who loves to learn and share knowledge. I'm passionate about technology, programming, and software development. I'm always looking for new challenges and opportunities to grow."
+    "TITLE": "Web Developer and Designer",
+    "DESCRIPTION": "I'm a web developer and designer who loves to learn and share knowledge. I'm passionate about technology, programming, and software development. I'm always looking for new challenges and opportunities to grow."
   },
   "ABOUT": {
     "TITLE": "about",
