--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,5 +1,5 @@
 {
-  "SEO_TITLE": "Hub Notes- Resource and Content Center",
+  "SEO_TITLE": "Hub Notes - Resource and Content Center",
   "SEO_DESCRIPTION": "Explore books, articles, hobbies, and educational resources at Justcoddev's personal hub. Discover the best of my career and my recommendations.",
   "ERROR_404": {
     "TITLE": "404 - Not Found",
@@ -8,7 +8,7 @@
   },
   "HERO": {
     "NAME": "Just Pixel Design Notes",
-    "TITLE": "Web Developer and Designer",
+    "TITLE": "Web Design",
     "DESCRIPTION": "I'm a web developer and designer who loves to learn and share knowledge. I'm passionate about technology, programming, and software development. I'm always looking for new challenges and opportunities to grow."
   },
   "ABOUT": {
