--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,5 +1,5 @@
 {
-  "SEO_TITLE": "Hub Notes - Resource and Content Center",
+  "SEO_TITLE": "Hub Notes - Web Design Resources",
   "SEO_DESCRIPTION": "Explore books, articles, hobbies, and educational resources at Justcoddev's personal hub. Discover the best of my career and my recommendations.",
   "ERROR_404": {
     "TITLE": "404 - Not Found",
